--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@
 body{
     background-image: url("8389461\ copy.jpg");
     background-size: 1550px 750px;
+    background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
-    
 }
 
 #main{
@@ -45,7 +45,6 @@ p{
     color: whitesmoke;
 }
 
-
 .intro{
     margin-top: 20px;
 }
@@ -54,16 +53,13 @@ p{
     margin-top: 20px;
 }
 
-button{
+.submit{
     margin-top: 15px;
 }
 
 .guess{
-    margin: 20px;
-    
+    margin: 20px;   
 }
-
-
 
 input{
     background-color: transparent;
@@ -72,25 +68,40 @@ input{
     color: whitesmoke;
     width: 500px;
     padding: 12px;
-    /* margin: 20px 20px; */
-   
 }
 
 .highorlow{
     margin-top: 10px;
 }
 
+.againButton{
+    margin: 10px 10px;
+}
 
 @media only screen and (max-width: 600px){
 
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
     .main{
-        width: 450px;
+        width: 300px;
     }
 
     .guessfield{
-        width: 380px;
+        width: 180px;
     }
 
+    body{
+        background-size: 1300px 700px;
+    }
+
+    #main{
+        margin-top: 35px;
+    }
 
 }
 
