--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ input{
     margin: 10px 10px;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 450px){
 
 
     *{
@@ -104,6 +104,56 @@ input{
     }
 
 }
+
+
+@media only screen and (max-width: 1200px){
+    body{
+        background-size: 1300px 700px;
+    }
+
+}
+
+
+
+@media only screen and (max-width: 860px) and (min-width: 750px)  {
+
+    .main{
+        width: 650px;
+    }
+
+    .guessfield{
+        width: 480px;
+    }
+
+}
+
+@media only screen and (max-width: 750px) and (min-width: 600px)  {
+
+    .main{
+        width: 580px;
+    }
+
+    .guessfield{
+        width: 350px;
+    }
+
+}
+
+@media only screen and (max-width: 600px) and (min-width: 450px)  {
+
+    .main{
+        width: 410px;
+    }
+
+    .guessfield{
+        width: 280px;
+    }
+
+}
+
+
+
+
 
 
 
